# freertos-test-system-stm32f429

./: .gdbinit  .gitignore  CMakeLists.txt  README.md
cmake/: gcc-toolchain.cmake
config/: reflector_config.toml
dbc/: canproto.dbc
include/: can.h  caneth.h  led.h  logging.h  shell_cmds.h  stats_timer.h  status_flags.h  task_can1.h  task_can2.h  task_caneth.h  task_shell.h  task_stats.h  task_worker0.h  task_worker1.h
include/config/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  stm32f4xx_hal_conf.h  trcConfig.h  trcStreamPortConfig.h
include/config/tracing/: system_trace_config.h
scripts/: build.sh  candump_can0.sh  flash.sh  gen_can0_dowork0.sh  gen_can_dbc_src.sh  import_rtt.sh  read_barectf_rtt.sh  read_rtt.sh  recv_caneth.py  setup_can0.sh  setup_modality.sh  start_openocd.sh  stream_rtt.sh
src/: hooks.c  ip.c  led.c  logging.c  main.c  shell_cmds.c  stats_timer.c  status_flags.c  task_can1.c  task_can2.c  task_caneth.c  task_shell.c  task_stats.c  task_worker0.c  task_worker1.c
src/can2/: task_can2.c  tp.c  tp.h
src/caneth/: task_caneth.c  tp.h
tracing/app-trace/: app_trace.c
tracing/app-trace/config/: config.yaml  events.yaml  platform-trace-type.yaml
tracing/app-trace/include/: app_trace.h  trace_config.h
tracing/barectf-platform-rtt/: CMakeLists.txt  barectf_platform_rtt.c
tracing/barectf-platform-rtt/include/: barectf_platform_rtt.h
tracing/system-trace/: CMakeLists.txt  system_trace.c
tracing/system-trace/include/: system_trace.h
tracing/trace-schema/: CMakeLists.txt
tracing/trace-schema/config/: common-events.yaml
tracing/trace-schema/config/test-system/: config.yaml  test-system-clock.yaml  test-system-events.yaml  test-system-platform.yaml  test-system-stream.yaml
tracing/trace-schema/config/test-system/caneth/: caneth-events.yaml  caneth-stream.yaml
tracing/trace-schema/config/test-system/led/: led-events.yaml  led-stream.yaml
tracing/trace-schema/schema/: metadata
tracing/tracepoint/: CMakeLists.txt
tracing/tracepoint/include/: tracepoint.h
